--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,458 +1,36 @@
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/ui/
-/project/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/ui/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/project/
-/controllers/
-/project/
-/controllers/
-/controllers/
-/project/
-/project/
-/project/
-/project/
-/controllers/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/controllers/
-/controllers/
-/project/
-/project/
-/controllers/
-/controllers/
-/project/
-/project/
-/controllers/
-/project/
-/controllers/
-/project/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/controllers/
-/controllers/
-/controllers/
-/controllers/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/utils/
-/utils/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/project/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/project/
-/project/
-/ui/
-/project/
-/project/
-/project/
-/project/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
-/ui/
+#Personal for ForGenHome
+bin/
+out/
+RemoteSystemsTempFiles/
+.metadata/
+result/
+Eukaryotes/
+Prokaryotes/
+Viruses/
+state_viruses.txt
+state_prokaryotes.txt
+state_eukaryotes.txt
+viruses.txt
+prokaryotes.txt
+eukaryotes.txt
+temp
+
+#global
+*.class
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
