--- a/.classpath
+++ b/.classpath
@@ -2,22 +2,21 @@
 <classpath>
 	<classpathentry excluding="src/" kind="src" path=""/>
 	<classpathentry kind="src" path="src"/>
-    <classpathentry kind="lib" path="lib/lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections4-4.1.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/curvesapi-1.04.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/lombok.jar"/>
-    <classpathentry kind="lib" path="lib/poi-3.15"/>
-	<classpathentry kind="lib" path="lib/poi-examples-3.15"/>
-	<classpathentry kind="lib" path="lib/poi-excelant-3.15"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-3.15"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.15"/>
-	<classpathentry kind="lib" path="lib/poi-scratchpad-3.15"/>
-	<classpathentry kind="lib" path="lib/xmlbeans-2.6.0"/>
+	<classpathentry kind="lib" path="/ForGenHome/lib/poi-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="/ForGenHome/lib/poi-ooxml-3.11-20141221.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lib"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/curvesapi-1.04"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/xmlbeans-2.6.0"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi-3.15"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi-examples-3.15"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi-excelant-3.15"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi-ooxml-3.15"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi-ooxml-schemas-3.15"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/poi-scratchpad-3.15"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/lombok"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/commons-codec-1.10"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
